[gd_scene load_steps=17 format=3 uid="uid://cly8tprr0px40"]

[ext_resource type="Script" path="res://scripts/game/lobby.gd" id="1_klfky"]
[ext_resource type="PackedScene" uid="uid://ddc1jq7syotkb" path="res://scenes/cat.tscn" id="1_kxa5x"]
[ext_resource type="Resource" uid="uid://c6cdibbeske76" path="res://resources/data/player_data.tres" id="2_x3k1b"]
[ext_resource type="TileSet" uid="uid://cc1c4td0v1x2k" path="res://resources/tileset.tres" id="3_mq2j0"]
[ext_resource type="AudioStream" uid="uid://hrg1l814nmy6" path="res://assets/audio/menu/Button_2.wav" id="4_7s4rg"]
[ext_resource type="AudioStream" uid="uid://cuo51evj78qlj" path="res://assets/audio/music/Lobby_Loop.wav" id="5_44c3l"]
[ext_resource type="PackedScene" uid="uid://yrrgdej2dv7m" path="res://scenes/envrionmental_objects/upgrade.tscn" id="5_fnnb4"]
[ext_resource type="Texture2D" uid="uid://d1hdxbpvigfyg" path="res://assets/art/objects/building_1.png" id="6_e5kcf"]
[ext_resource type="Texture2D" uid="uid://cki1trcbilpjj" path="res://assets/art/objects/building_2.png" id="7_cddot"]
[ext_resource type="Resource" uid="uid://cq0mlf5wm2v6x" path="res://resources/data/upgrade_data_speed.tres" id="7_pvc7b"]
[ext_resource type="Texture2D" uid="uid://dohv17qn1ruyn" path="res://assets/art/objects/building_3.png" id="8_6nvog"]
[ext_resource type="Resource" uid="uid://c4ow74vsr7o1r" path="res://resources/data/upgrade_data_fire_rate.tres" id="9_i1bre"]
[ext_resource type="Texture2D" uid="uid://b0366fyv0pbll" path="res://assets/art/objects/fountain.png" id="9_un3yt"]
[ext_resource type="Resource" uid="uid://bir0fbh4sq1yk" path="res://resources/data/upgrade_data_health.tres" id="11_xk6di"]
[ext_resource type="Resource" uid="uid://btlckbi03yr6g" path="res://resources/data/upgrade_data_bullet_speed.tres" id="13_a1tei"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2n1il"]
size = Vector2(12.5, 16.25)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_klfky")
player_data = ExtResource("2_x3k1b")

[node name="Cat" parent="." instance=ExtResource("1_kxa5x")]
position = Vector2(535, 425)
metadata/_edit_group_ = true

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = ExtResource("3_mq2j0")
format = 2
layer_0/tile_data = PackedInt32Array(1638430, 1, 2, 1703966, 1, 3, 1769502, 1, 4, 1638431, 65537, 2, 1703967, 65537, 3, 1769503, 65537, 4, 1638432, 131073, 2, 1703968, 131073, 3, 1769504, 131073, 4, 1638433, 196609, 2, 1703969, 196609, 3, 1769505, 196609, 4, 1638434, 262145, 2, 1703970, 262145, 3, 1769506, 262145, 4, 1638435, 327681, 2, 1703971, 327681, 3, 1769507, 327681, 4, 1638436, 1, 2, 1703972, 458753, 5, 1769508, 1, 4, 1507360, 524289, 0, 1572896, 131073, 1, 1507361, 393217, 6, 1572897, 196609, 1, 1507362, 655361, 0, 1572898, 262145, 1, 1835040, 131073, 5, 1900576, 131073, 6, 1835041, 196609, 5, 1900577, 196609, 6, 1835042, 262145, 5, 1900578, 262145, 6, 1835033, 1, 5, 1835034, 1, 5, 1900570, 1, 5, 1900571, 1, 5, 1966107, 1, 5, 1966108, 1, 5, 2031644, 1, 5, 2031645, 1, 5, 1835048, 1, 5, 1835049, 1, 5, 1900584, 1, 5, 1900583, 1, 5, 1966119, 1, 5, 1966118, 1, 5, 2031654, 1, 5, 2031653, 1, 5, 2097181, 1, 5, 2097182, 1, 5, 2097183, 1, 5, 2097184, 65537, 1, 2097185, 65537, 1, 2097186, 65537, 1, 2097187, 1, 5, 2097188, 1, 5, 2097189, 1, 5, 1769497, 1, 1, 1703961, 1, 1, 1638425, 1, 1, 1572889, 1, 5, 1507353, 1, 5, 1441817, 1, 5, 1769513, 1, 1, 1703977, 1, 1, 1638441, 1, 1, 1572905, 1, 5, 1507369, 1, 5, 1441833, 1, 5, 1966114, 262145, 6, 2031650, 65537, 1, 1966112, 131073, 0, 2031648, 524289, 2, 1966113, 458753, 3, 2031649, 393217, 6, 1638428, 393217, 2, 1703964, 393217, 3, 1769500, 393217, 4, 1638429, 458753, 2, 1703965, 393217, 6, 1769501, 458753, 4, 1638426, 1, 1, 1703962, 458753, 3, 1769498, 1, 4, 1638427, 1, 2, 1703963, 393217, 5, 1769499, 786433, 4, 1638437, 720897, 2, 1703973, 589825, 3, 1769509, 720897, 4, 1638438, 393217, 2, 1703974, 786433, 3, 1769510, 1, 4, 1638439, 1, 2, 1703975, 393217, 5, 1769511, 1, 4, 1638440, 1, 2, 1703976, 589825, 3, 1769512, 720897, 4, 1441818, 1, 5, 1376282, 1, 5, 1376283, 1, 5, 1310747, 1, 5, 1310748, 1, 5, 1310749, 1, 5, 1245213, 1, 5, 1245214, 1, 5, 1376296, 1, 5, 1310759, 1, 5, 1310758, 1, 5, 1310757, 1, 5, 1245221, 1, 5, 1245220, 1, 5, 1179684, 1, 5, 1179683, 1, 5, 1179679, 1, 5, 1179678, 1, 5, 1376288, 524289, 6, 1441824, 524289, 6, 1376289, 589825, 0, 1441825, 589825, 1, 1376290, 655361, 0, 1441826, 655361, 1, 1245216, 524289, 0, 1310752, 524289, 1, 1245217, 458753, 5, 1310753, 393217, 6, 1245218, 655361, 6, 1310754, 655361, 1, 1179680, 524289, 0, 1179681, 589825, 0, 1179682, 655361, 0, 1507354, 1, 0, 1572890, 1, 0, 1507355, 65537, 0, 1572891, 65537, 0, 1507356, 65537, 0, 1572892, 65537, 0, 1507357, 1, 0, 1572893, 1, 0, 1507358, 1, 0, 1572894, 1, 0, 1507359, 65537, 0, 1572895, 65537, 0, 1376284, 65537, 0, 1441820, 1, 0, 1376285, 1, 0, 1441821, 1, 0, 1376286, 65537, 0, 1441822, 1, 0, 1376287, 1, 0, 1441823, 1, 0, 1441819, 1, 0, 1310750, 65537, 0, 1310751, 1, 0, 1245215, 65537, 0, 1835036, 65537, 0, 1835037, 65537, 0, 1835038, 65537, 0, 1835039, 1, 0, 1835035, 1, 0, 1900572, 65537, 0, 1900573, 1, 0, 1900574, 1, 0, 1900575, 1, 0, 1966109, 65537, 0, 1966110, 65537, 0, 1966111, 65537, 0, 2031646, 1, 0, 2031647, 65537, 0, 1835043, 1, 0, 1835044, 65537, 0, 1835045, 65537, 0, 1835046, 65537, 0, 1835047, 65537, 0, 1900579, 65537, 0, 1900580, 65537, 0, 1900581, 65537, 0, 1900582, 1, 0, 1966115, 65537, 0, 1966116, 1, 0, 1966117, 65537, 0, 2031651, 65537, 0, 2031652, 65537, 0, 1245219, 65537, 0, 1310755, 1, 0, 1376291, 65537, 0, 1441827, 1, 0, 1507363, 65537, 0, 1572899, 65537, 0, 1310756, 1, 0, 1376292, 65537, 0, 1441828, 1, 0, 1507364, 65537, 0, 1572900, 1, 0, 1376293, 1, 0, 1441829, 1, 0, 1507365, 65537, 0, 1572901, 1, 0, 1376294, 65537, 0, 1441830, 65537, 0, 1507366, 1, 0, 1572902, 65537, 0, 1376295, 1, 5, 1441831, 65537, 0, 1507367, 1, 0, 1572903, 65537, 0, 1441832, 1, 5, 1507368, 65537, 0, 1572904, 65537, 0, 983071, 1, 5, 1048607, 1, 5, 1114143, 1, 5, 983075, 1, 5, 1048611, 1, 5, 1114147, 1, 5, 1048608, 524289, 1, 1114144, 524289, 1, 1048609, 589825, 1, 1114145, 589825, 1, 1048610, 655361, 1, 1114146, 655361, 1, 983072, 524289, 0, 983073, 589825, 0, 983074, 655361, 0, 2162720, 524289, 4, 2228256, 524289, 0, 2162721, 589825, 0, 2228257, 589825, 0, 2162722, 589825, 5, 2228258, 655361, 4, 2293792, 524289, 1, 2293793, 589825, 1, 2293794, 655361, 1, 2359328, 524289, 0, 2424864, 524289, 1, 2359329, 589825, 0, 2424865, 589825, 1, 2359330, 655361, 0, 2424866, 655361, 1, 2490400, 524289, 0, 2555936, 524289, 1, 2490401, 589825, 0, 2555937, 589825, 1, 2490402, 655361, 0, 2555938, 655361, 1, 2621472, 524289, 0, 2687008, 524289, 1, 2621473, 589825, 0, 2687009, 589825, 1, 2621474, 655361, 0, 2687010, 655361, 1, 2752544, 524289, 0, 2818080, 524289, 1, 2752545, 589825, 0, 2818081, 589825, 1, 2752546, 655361, 0, 2818082, 655361, 1, 1638442, 655361, 2, 1703978, 720897, 3, 1769514, 655361, 4, 1638443, 786433, 2, 1703979, 786433, 3, 1769515, 786433, 4, 1638444, 720897, 2, 1703980, 720897, 3, 1769516, 720897, 4, 1638445, 786433, 2, 1703981, 786433, 3, 1769517, 786433, 4, 1638446, 720897, 2, 1703982, 720897, 3, 1769518, 720897, 4, 1638447, 786433, 2, 1703983, 786433, 3, 1769519, 786433, 4, 1638448, 720897, 2, 1703984, 720897, 3, 1769520, 720897, 4, 1638449, 786433, 2, 1703985, 786433, 3, 1769521, 786433, 4, 1638450, 720897, 2, 1703986, 720897, 3, 1769522, 720897, 4, 1638451, 786433, 2, 1703987, 786433, 3, 1769523, 786433, 4, 1638423, 524289, 2, 1703959, 393217, 3, 1769495, 393217, 4, 1638424, 327681, 5, 1703960, 458753, 3, 1769496, 524289, 4, 1638421, 393217, 2, 1703957, 393217, 3, 1769493, 393217, 4, 1638422, 458753, 2, 1703958, 458753, 3, 1769494, 458753, 4, 1638419, 393217, 2, 1703955, 393217, 3, 1769491, 393217, 4, 1638420, 458753, 2, 1703956, 458753, 3, 1769492, 458753, 4, 1638417, 393217, 2, 1703953, 393217, 3, 1769489, 393217, 4, 1638418, 458753, 2, 1703954, 458753, 3, 1769490, 458753, 4, 1835025, 65537, 0, 1900561, 65537, 0, 1966097, 1, 0, 2031633, 65537, 0, 2097169, 65537, 0, 2162705, 65537, 0, 2228241, 1, 0, 2293777, 65537, 0, 2359313, 1, 0, 2424849, 65537, 0, 2490385, 1, 0, 2555921, 1, 0, 2621457, 65537, 0, 2686993, 65537, 0, 2752529, 65537, 0, 2818065, 65537, 0, 1835026, 65537, 0, 1900562, 1, 0, 1966098, 1, 0, 2031634, 1, 0, 2097170, 1, 0, 2162706, 65537, 0, 2228242, 65537, 0, 2293778, 1, 0, 2359314, 1, 0, 2424850, 1, 0, 2490386, 1, 0, 2555922, 1, 0, 2621458, 1, 0, 2686994, 65537, 0, 2752530, 1, 0, 2818066, 65537, 0, 1835027, 1, 0, 1900563, 65537, 0, 1966099, 65537, 0, 2031635, 65537, 0, 2097171, 1, 0, 2162707, 65537, 0, 2228243, 1, 0, 2293779, 65537, 0, 2359315, 1, 0, 2424851, 1, 0, 2490387, 65537, 0, 2555923, 1, 0, 2621459, 65537, 0, 2686995, 1, 0, 2752531, 65537, 0, 2818067, 1, 0, 1835028, 1, 0, 1900564, 65537, 0, 1966100, 65537, 0, 2031636, 65537, 0, 2097172, 65537, 0, 2162708, 1, 0, 2228244, 65537, 0, 2293780, 1, 0, 2359316, 1, 0, 2424852, 1, 0, 2490388, 65537, 0, 2555924, 1, 0, 2621460, 1, 0, 2686996, 65537, 0, 2752532, 65537, 0, 2818068, 1, 0, 1835029, 65537, 0, 1900565, 65537, 0, 1966101, 1, 0, 2031637, 1, 0, 2097173, 1, 0, 2162709, 1, 0, 2228245, 1, 0, 2293781, 65537, 0, 2359317, 65537, 0, 2424853, 65537, 0, 2490389, 65537, 0, 2555925, 65537, 0, 2621461, 65537, 0, 2686997, 65537, 0, 2752533, 1, 0, 2818069, 1, 0, 1835030, 1, 0, 1900566, 65537, 0, 1966102, 1, 0, 2031638, 65537, 0, 2097174, 65537, 0, 2162710, 1, 0, 2228246, 65537, 0, 2293782, 65537, 0, 2359318, 1, 0, 2424854, 65537, 0, 2490390, 1, 0, 2555926, 65537, 0, 2621462, 1, 0, 2686998, 65537, 0, 2752534, 65537, 0, 2818070, 1, 0, 1835031, 1, 0, 1900567, 1, 0, 1966103, 1, 0, 2031639, 65537, 0, 2097175, 65537, 0, 2162711, 65537, 0, 2228247, 65537, 0, 2293783, 1, 0, 2359319, 65537, 0, 2424855, 65537, 0, 2490391, 65537, 0, 2555927, 65537, 0, 2621463, 65537, 0, 2686999, 1, 0, 2752535, 65537, 0, 2818071, 65537, 0, 1835032, 65537, 0, 1900568, 1, 0, 1966104, 65537, 0, 2031640, 1, 0, 2097176, 1, 0, 2162712, 65537, 0, 2228248, 1, 0, 2293784, 1, 0, 2359320, 65537, 0, 2424856, 1, 0, 2490392, 65537, 0, 2555928, 65537, 0, 2621464, 65537, 0, 2687000, 65537, 0, 2752536, 1, 0, 2818072, 65537, 0, 2162713, 65537, 0, 2228249, 65537, 0, 2293785, 65537, 0, 2359321, 1, 0, 2424857, 1, 0, 2490393, 1, 0, 2555929, 1, 0, 2621465, 1, 0, 2687001, 1, 0, 2752537, 1, 0, 2818073, 65537, 0, 2162714, 65537, 0, 2228250, 65537, 0, 2293786, 1, 0, 2359322, 1, 0, 2424858, 1, 0, 2490394, 65537, 0, 2555930, 65537, 0, 2621466, 1, 0, 2687002, 65537, 0, 2752538, 65537, 0, 2818074, 65537, 0, 2162715, 65537, 0, 2228251, 1, 0, 2293787, 65537, 0, 2359323, 65537, 0, 2424859, 65537, 0, 2490395, 1, 0, 2555931, 65537, 0, 2621467, 1, 0, 2687003, 1, 0, 2752539, 65537, 0, 2818075, 65537, 0, 2162716, 1, 0, 2228252, 65537, 0, 2293788, 65537, 0, 2359324, 1, 0, 2424860, 65537, 0, 2490396, 65537, 0, 2555932, 1, 0, 2621468, 1, 0, 2687004, 65537, 0, 2752540, 65537, 0, 2818076, 1, 0, 2162717, 65537, 0, 2228253, 1, 0, 2293789, 65537, 0, 2359325, 65537, 0, 2424861, 65537, 0, 2490397, 65537, 0, 2555933, 1, 0, 2621469, 65537, 0, 2687005, 65537, 0, 2752541, 1, 0, 2818077, 65537, 0, 2162718, 65537, 0, 2228254, 65537, 0, 2293790, 65537, 0, 2359326, 65537, 0, 2424862, 65537, 0, 2490398, 1, 0, 2555934, 1, 0, 2621470, 65537, 0, 2687006, 65537, 0, 2752542, 1, 0, 2818078, 65537, 0, 2162719, 65537, 0, 2228255, 1, 0, 2293791, 1, 0, 2359327, 65537, 0, 2424863, 1, 0, 2490399, 1, 0, 2555935, 1, 0, 2621471, 65537, 0, 2687007, 65537, 0, 2752543, 1, 0, 2818079, 65537, 0, 1900569, 1, 0, 1966105, 65537, 0, 2031641, 65537, 0, 2097177, 1, 0, 1966106, 65537, 0, 2031642, 1, 0, 2097178, 1, 0, 2031643, 1, 0, 2097179, 65537, 0, 2097180, 1, 0, 2162723, 1, 0, 2228259, 1, 0, 2293795, 1, 0, 2359331, 65537, 0, 2424867, 1, 0, 2490403, 65537, 0, 2555939, 65537, 0, 2621475, 65537, 0, 2687011, 1, 0, 2752547, 1, 0, 2818083, 65537, 0, 2162724, 1, 0, 2228260, 65537, 0, 2293796, 1, 0, 2359332, 1, 0, 2424868, 65537, 0, 2490404, 65537, 0, 2555940, 1, 0, 2621476, 1, 0, 2687012, 1, 0, 2752548, 65537, 0, 2818084, 1, 0, 2162725, 65537, 0, 2228261, 1, 0, 2293797, 65537, 0, 2359333, 65537, 0, 2424869, 1, 0, 2490405, 1, 0, 2555941, 65537, 0, 2621477, 65537, 0, 2687013, 1, 0, 2752549, 1, 0, 2818085, 65537, 0, 2162726, 1, 0, 2228262, 1, 0, 2293798, 1, 0, 2359334, 65537, 0, 2424870, 65537, 0, 2490406, 1, 0, 2555942, 65537, 0, 2621478, 65537, 0, 2687014, 1, 0, 2752550, 1, 0, 2818086, 65537, 0, 2162727, 1, 0, 2228263, 1, 0, 2293799, 65537, 0, 2359335, 1, 0, 2424871, 1, 0, 2490407, 65537, 0, 2555943, 65537, 0, 2621479, 65537, 0, 2687015, 1, 0, 2752551, 65537, 0, 2818087, 65537, 0, 2162728, 65537, 0, 2228264, 65537, 0, 2293800, 65537, 0, 2359336, 1, 0, 2424872, 65537, 0, 2490408, 65537, 0, 2555944, 65537, 0, 2621480, 1, 0, 2687016, 1, 0, 2752552, 65537, 0, 2818088, 65537, 0, 2162729, 65537, 0, 2228265, 1, 0, 2293801, 1, 0, 2359337, 1, 0, 2424873, 65537, 0, 2490409, 65537, 0, 2555945, 1, 0, 2621481, 65537, 0, 2687017, 65537, 0, 2752553, 65537, 0, 2818089, 1, 0, 2162730, 65537, 0, 2228266, 65537, 0, 2293802, 65537, 0, 2359338, 65537, 0, 2424874, 65537, 0, 2490410, 65537, 0, 2555946, 1, 0, 2621482, 1, 0, 2687018, 65537, 0, 2752554, 65537, 0, 2818090, 1, 0, 2162731, 65537, 0, 2228267, 65537, 0, 2293803, 65537, 0, 2359339, 1, 0, 2424875, 65537, 0, 2490411, 1, 0, 2555947, 65537, 0, 2621483, 65537, 0, 2687019, 65537, 0, 2752555, 1, 0, 2818091, 65537, 0, 2162732, 65537, 0, 2228268, 1, 0, 2293804, 65537, 0, 2359340, 1, 0, 2424876, 1, 0, 2490412, 65537, 0, 2555948, 65537, 0, 2621484, 65537, 0, 2687020, 1, 0, 2752556, 65537, 0, 2818092, 65537, 0, 2162733, 1, 0, 2228269, 1, 0, 2293805, 1, 0, 2359341, 65537, 0, 2424877, 1, 0, 2490413, 1, 0, 2555949, 1, 0, 2621485, 65537, 0, 2687021, 1, 0, 2752557, 1, 0, 2818093, 1, 0, 2162734, 1, 0, 2228270, 1, 0, 2293806, 65537, 0, 2359342, 65537, 0, 2424878, 1, 0, 2490414, 1, 0, 2555950, 65537, 0, 2621486, 1, 0, 2687022, 65537, 0, 2752558, 65537, 0, 2818094, 1, 0, 2162735, 1, 0, 2228271, 65537, 0, 2293807, 65537, 0, 2359343, 1, 0, 2424879, 1, 0, 2490415, 65537, 0, 2555951, 65537, 0, 2621487, 65537, 0, 2687023, 65537, 0, 2752559, 1, 0, 2818095, 65537, 0, 2162736, 1, 0, 2228272, 65537, 0, 2293808, 1, 0, 2359344, 1, 0, 2424880, 65537, 0, 2490416, 1, 0, 2555952, 1, 0, 2621488, 1, 0, 2687024, 65537, 0, 2752560, 1, 0, 2818096, 1, 0, 2162737, 1, 0, 2228273, 1, 0, 2293809, 1, 0, 2359345, 1, 0, 2424881, 65537, 0, 2490417, 1, 0, 2555953, 65537, 0, 2621489, 1, 0, 2687025, 1, 0, 2752561, 65537, 0, 2818097, 65537, 0, 2162738, 65537, 0, 2228274, 65537, 0, 2293810, 1, 0, 2359346, 1, 0, 2424882, 1, 0, 2490418, 65537, 0, 2555954, 1, 0, 2621490, 1, 0, 2687026, 65537, 0, 2752562, 65537, 0, 2818098, 1, 0, 2162739, 1, 0, 2228275, 65537, 0, 2293811, 1, 0, 2359347, 1, 0, 2424883, 65537, 0, 2490419, 65537, 0, 2555955, 65537, 0, 2621491, 1, 0, 2687027, 1, 0, 2752563, 65537, 0, 2818099, 65537, 0, 1835050, 1, 0, 1900586, 65537, 0, 1966122, 1, 0, 2031658, 65537, 0, 2097194, 65537, 0, 1835051, 65537, 0, 1900587, 65537, 0, 1966123, 1, 0, 2031659, 1, 0, 2097195, 1, 0, 1835052, 1, 0, 1900588, 1, 0, 1966124, 65537, 0, 2031660, 65537, 0, 2097196, 1, 0, 1835053, 1, 0, 1900589, 1, 0, 1966125, 1, 0, 2031661, 65537, 0, 2097197, 65537, 0, 1835054, 1, 0, 1900590, 1, 0, 1966126, 65537, 0, 2031662, 65537, 0, 2097198, 1, 0, 1835055, 65537, 0, 1900591, 65537, 0, 1966127, 1, 0, 2031663, 65537, 0, 2097199, 1, 0, 1835056, 65537, 0, 1900592, 1, 0, 1966128, 65537, 0, 2031664, 65537, 0, 2097200, 1, 0, 1835057, 65537, 0, 1900593, 1, 0, 1966129, 65537, 0, 2031665, 1, 0, 2097201, 1, 0, 1835058, 1, 0, 1900594, 1, 0, 1966130, 65537, 0, 2031666, 65537, 0, 2097202, 1, 0, 1900585, 65537, 0, 1966121, 1, 0, 2031657, 65537, 0, 2097193, 1, 0, 1835059, 65537, 0, 1900595, 65537, 0, 1966131, 65537, 0, 2031667, 65537, 0, 2097203, 1, 0, 1966120, 1, 0, 2031656, 65537, 0, 2097192, 1, 0, 2031655, 65537, 0, 2097191, 65537, 0, 2097190, 1, 0, 983057, 1, 0, 1048593, 1, 0, 1114129, 65537, 0, 1179665, 65537, 0, 1245201, 65537, 0, 1310737, 1, 0, 1376273, 1, 0, 1441809, 65537, 0, 1507345, 1, 0, 1572881, 65537, 0, 983058, 1, 0, 1048594, 1, 0, 1114130, 1, 0, 1179666, 65537, 0, 1245202, 65537, 0, 1310738, 65537, 0, 1376274, 1, 0, 1441810, 65537, 0, 1507346, 65537, 0, 1572882, 65537, 0, 983059, 1, 0, 1048595, 1, 0, 1114131, 65537, 0, 1179667, 1, 0, 1245203, 65537, 0, 1310739, 1, 0, 1376275, 65537, 0, 1441811, 1, 0, 1507347, 1, 0, 1572883, 1, 0, 983060, 65537, 0, 1048596, 65537, 0, 1114132, 65537, 0, 1179668, 1, 0, 1245204, 65537, 0, 1310740, 1, 0, 1376276, 1, 0, 1441812, 1, 0, 1507348, 1, 0, 1572884, 65537, 0, 983061, 65537, 0, 1048597, 1, 0, 1114133, 65537, 0, 1179669, 65537, 0, 1245205, 65537, 0, 1310741, 1, 0, 1376277, 65537, 0, 1441813, 1, 0, 1507349, 65537, 0, 1572885, 1, 0, 983062, 65537, 0, 1048598, 1, 0, 1114134, 65537, 0, 1179670, 65537, 0, 1245206, 65537, 0, 1310742, 1, 0, 1376278, 65537, 0, 1441814, 65537, 0, 1507350, 1, 0, 1572886, 1, 0, 983063, 65537, 0, 1048599, 65537, 0, 1114135, 65537, 0, 1179671, 1, 0, 1245207, 65537, 0, 1310743, 1, 0, 1376279, 65537, 0, 1441815, 65537, 0, 1507351, 1, 0, 1572887, 1, 0, 983064, 1, 0, 1048600, 65537, 0, 1114136, 65537, 0, 1179672, 65537, 0, 1245208, 1, 0, 1310744, 1, 0, 1376280, 1, 0, 1441816, 65537, 0, 1507352, 65537, 0, 1572888, 1, 0, 983065, 1, 0, 1048601, 65537, 0, 1114137, 65537, 0, 1179673, 65537, 0, 1245209, 65537, 0, 1310745, 1, 0, 983066, 65537, 0, 1048602, 1, 0, 1114138, 1, 0, 1179674, 1, 0, 1245210, 65537, 0, 1310746, 1, 0, 1376281, 65537, 0, 983067, 65537, 0, 1048603, 65537, 0, 1114139, 65537, 0, 983068, 65537, 0, 1048604, 65537, 0, 1114140, 65537, 0, 983069, 1, 0, 1048605, 65537, 0, 1114141, 65537, 0, 983070, 65537, 0, 1048606, 1, 0, 1114142, 65537, 0, 1179675, 65537, 0, 1179676, 1, 0, 1245211, 65537, 0, 1245212, 65537, 0, 1179677, 65537, 0, 983076, 65537, 0, 1048612, 65537, 0, 1114148, 1, 0, 983077, 65537, 0, 1048613, 1, 0, 1114149, 1, 0, 983078, 65537, 0, 1048614, 65537, 0, 1114150, 1, 0, 983079, 65537, 0, 1048615, 1, 0, 1114151, 65537, 0, 983080, 1, 0, 1048616, 1, 0, 1114152, 65537, 0, 983081, 1, 0, 1048617, 65537, 0, 1114153, 1, 0, 983082, 1, 0, 1048618, 1, 0, 1114154, 65537, 0, 983083, 65537, 0, 1048619, 65537, 0, 1114155, 65537, 0, 983084, 65537, 0, 1048620, 1, 0, 1114156, 65537, 0, 983085, 1, 0, 1048621, 65537, 0, 1114157, 65537, 0, 983086, 65537, 0, 1048622, 1, 0, 1114158, 1, 0, 983087, 1, 0, 1048623, 1, 0, 1114159, 1, 0, 983088, 65537, 0, 1048624, 1, 0, 1114160, 65537, 0, 983089, 1, 0, 1048625, 1, 0, 1114161, 65537, 0, 983090, 65537, 0, 1048626, 65537, 0, 1114162, 65537, 0, 983091, 1, 0, 1048627, 1, 0, 1114163, 1, 0, 1179685, 1, 0, 1179686, 1, 0, 1179687, 1, 0, 1179688, 1, 0, 1179689, 1, 0, 1179690, 65537, 0, 1179691, 65537, 0, 1179692, 65537, 0, 1179693, 65537, 0, 1179694, 1, 0, 1179695, 1, 0, 1179696, 65537, 0, 1179697, 65537, 0, 1179698, 65537, 0, 1179699, 65537, 0, 1245226, 1, 0, 1310762, 1, 0, 1376298, 65537, 0, 1441834, 1, 0, 1507370, 65537, 0, 1572906, 65537, 0, 1245227, 1, 0, 1310763, 1, 0, 1376299, 1, 0, 1441835, 65537, 0, 1507371, 65537, 0, 1572907, 65537, 0, 1245228, 65537, 0, 1310764, 65537, 0, 1376300, 1, 0, 1441836, 65537, 0, 1507372, 65537, 0, 1572908, 1, 0, 1245229, 1, 0, 1310765, 65537, 0, 1376301, 1, 0, 1441837, 65537, 0, 1507373, 1, 0, 1572909, 1, 0, 1245230, 65537, 0, 1310766, 1, 0, 1376302, 65537, 0, 1441838, 1, 0, 1507374, 1, 0, 1572910, 65537, 0, 1245231, 1, 0, 1310767, 65537, 0, 1376303, 65537, 0, 1441839, 65537, 0, 1507375, 1, 0, 1572911, 1, 0, 1245232, 1, 0, 1310768, 65537, 0, 1376304, 1, 0, 1441840, 65537, 0, 1507376, 1, 0, 1572912, 65537, 0, 1245233, 1, 0, 1310769, 1, 0, 1376305, 65537, 0, 1441841, 1, 0, 1507377, 1, 0, 1572913, 1, 0, 1245234, 65537, 0, 1310770, 65537, 0, 1376306, 1, 0, 1441842, 65537, 0, 1507378, 1, 0, 1572914, 1, 0, 1245235, 65537, 0, 1310771, 1, 0, 1376307, 65537, 0, 1441843, 65537, 0, 1507379, 1, 0, 1572915, 1, 0, 1245222, 1, 0, 1245223, 65537, 0, 1245224, 1, 0, 1245225, 65537, 0, 1310760, 65537, 0, 1310761, 65537, 0, 1376297, 65537, 0, 852000, 524289, 1, 917536, 524289, 1, 852001, 589825, 1, 917537, 589825, 1, 852002, 655361, 1, 917538, 655361, 1, 786464, 524289, 1, 786465, 589825, 1, 786466, 655361, 1, 720928, 524289, 0, 720929, 589825, 0, 720930, 655361, 0, 589856, 524289, 1, 655392, 524289, 1, 589857, 589825, 1, 655393, 589825, 1, 589858, 655361, 1, 655394, 655361, 1, 524320, 524289, 0, 524321, 589825, 0, 524322, 655361, 0, 524305, 65537, 0, 589841, 65537, 0, 655377, 65537, 0, 720913, 1, 0, 786449, 65537, 0, 851985, 1, 0, 917521, 1, 0, 524306, 1, 0, 589842, 65537, 0, 655378, 65537, 0, 720914, 1, 0, 786450, 1, 0, 851986, 65537, 0, 917522, 1, 0, 524307, 1, 0, 589843, 1, 0, 655379, 1, 0, 720915, 65537, 0, 786451, 1, 0, 851987, 65537, 0, 917523, 1, 0, 524308, 65537, 0, 589844, 65537, 0, 655380, 65537, 0, 720916, 1, 0, 786452, 65537, 0, 851988, 65537, 0, 917524, 65537, 0, 524309, 1, 0, 589845, 1, 0, 655381, 1, 0, 720917, 1, 0, 786453, 65537, 0, 851989, 65537, 0, 917525, 1, 0, 524310, 65537, 0, 589846, 1, 0, 655382, 1, 0, 720918, 65537, 0, 786454, 65537, 0, 851990, 65537, 0, 917526, 1, 0, 524311, 1, 0, 589847, 65537, 0, 655383, 1, 0, 720919, 1, 0, 786455, 1, 0, 851991, 65537, 0, 917527, 65537, 0, 524312, 65537, 0, 589848, 65537, 0, 655384, 1, 0, 720920, 65537, 0, 786456, 1, 0, 851992, 1, 0, 917528, 65537, 0, 524313, 65537, 0, 589849, 1, 0, 655385, 65537, 0, 720921, 65537, 0, 786457, 65537, 0, 851993, 65537, 0, 917529, 65537, 0, 524314, 1, 0, 589850, 65537, 0, 655386, 1, 0, 720922, 65537, 0, 786458, 1, 0, 851994, 1, 0, 917530, 65537, 0, 524315, 1, 0, 589851, 1, 0, 655387, 1, 0, 720923, 1, 0, 786459, 65537, 0, 851995, 1, 0, 917531, 1, 0, 524316, 65537, 0, 589852, 1, 0, 655388, 1, 0, 720924, 65537, 0, 786460, 1, 0, 851996, 1, 0, 917532, 65537, 0, 524317, 65537, 0, 589853, 1, 0, 655389, 1, 0, 720925, 1, 0, 786461, 1, 0, 851997, 1, 0, 917533, 65537, 0, 524318, 65537, 0, 589854, 1, 0, 655390, 65537, 0, 720926, 65537, 0, 786462, 1, 0, 851998, 1, 0, 917534, 65537, 0, 524319, 65537, 0, 589855, 65537, 0, 655391, 65537, 0, 720927, 1, 0, 786463, 1, 0, 851999, 65537, 0, 917535, 65537, 0, 524323, 65537, 0, 589859, 65537, 0, 655395, 65537, 0, 720931, 1, 0, 786467, 1, 0, 852003, 65537, 0, 917539, 1, 0, 524324, 1, 0, 589860, 1, 0, 655396, 1, 0, 720932, 65537, 0, 786468, 65537, 0, 852004, 1, 0, 917540, 65537, 0, 524325, 65537, 0, 589861, 65537, 0, 655397, 65537, 0, 720933, 65537, 0, 786469, 1, 0, 852005, 65537, 0, 917541, 1, 0, 524326, 65537, 0, 589862, 1, 0, 655398, 65537, 0, 720934, 1, 0, 786470, 1, 0, 852006, 1, 0, 917542, 1, 0, 524327, 65537, 0, 589863, 1, 0, 655399, 65537, 0, 720935, 65537, 0, 786471, 1, 0, 852007, 1, 0, 917543, 65537, 0, 524328, 1, 0, 589864, 65537, 0, 655400, 1, 0, 720936, 1, 0, 786472, 65537, 0, 852008, 1, 0, 917544, 65537, 0, 524329, 1, 0, 589865, 65537, 0, 655401, 65537, 0, 720937, 65537, 0, 786473, 1, 0, 852009, 1, 0, 917545, 65537, 0, 524330, 65537, 0, 589866, 1, 0, 655402, 65537, 0, 720938, 1, 0, 786474, 1, 0, 852010, 1, 0, 917546, 65537, 0, 524331, 65537, 0, 589867, 1, 0, 655403, 65537, 0, 720939, 65537, 0, 786475, 1, 0, 852011, 1, 0, 917547, 1, 0, 524332, 1, 0, 589868, 1, 0, 655404, 65537, 0, 720940, 1, 0, 786476, 65537, 0, 852012, 65537, 0, 917548, 65537, 0, 524333, 65537, 0, 589869, 65537, 0, 655405, 65537, 0, 720941, 65537, 0, 786477, 1, 0, 852013, 1, 0, 917549, 65537, 0, 524334, 1, 0, 589870, 65537, 0, 655406, 65537, 0, 720942, 1, 0, 786478, 65537, 0, 852014, 65537, 0, 917550, 1, 0, 524335, 65537, 0, 589871, 65537, 0, 655407, 65537, 0, 720943, 1, 0, 786479, 1, 0, 852015, 65537, 0, 917551, 1, 0, 524336, 1, 0, 589872, 1, 0, 655408, 1, 0, 720944, 65537, 0, 786480, 65537, 0, 852016, 65537, 0, 917552, 65537, 0, 524337, 1, 0, 589873, 65537, 0, 655409, 65537, 0, 720945, 65537, 0, 786481, 1, 0, 852017, 1, 0, 917553, 65537, 0, 524338, 65537, 0, 589874, 1, 0, 655410, 65537, 0, 720946, 65537, 0, 786482, 1, 0, 852018, 1, 0, 917554, 1, 0, 524339, 1, 0, 589875, 65537, 0, 655411, 65537, 0, 720947, 65537, 0, 786483, 65537, 0, 852019, 1, 0, 917555, 1, 0)

[node name="NextArea" type="Area2D" parent="."]
position = Vector2(100, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="NextArea"]
position = Vector2(435, 272.5)
scale = Vector2(4, 4)
shape = SubResource("RectangleShape2D_2n1il")

[node name="LobbyLoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_44c3l")
volume_db = -80.0
bus = &"LevelMusic"

[node name="NextSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_7s4rg")
bus = &"SFX"

[node name="LoadDelay" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="UpgradeSpeed" parent="." instance=ExtResource("5_fnnb4")]
position = Vector2(488, 376)
upgrade_name = "speed"
cost_increase = 5
upgrade_data = ExtResource("7_pvc7b")
sprite = ExtResource("6_e5kcf")

[node name="UpgradeFireRate" parent="." instance=ExtResource("5_fnnb4")]
position = Vector2(584, 376)
upgrade_name = "fire_rate"
cost_increase = 10
upgrade_data = ExtResource("9_i1bre")
sprite = ExtResource("7_cddot")

[node name="UpgradeHealth" parent="." instance=ExtResource("5_fnnb4")]
position = Vector2(488, 472)
upgrade_name = "health"
cost_increase = 15
upgrade_data = ExtResource("11_xk6di")
sprite = ExtResource("8_6nvog")

[node name="UpgradeBulletSpeed" parent="." instance=ExtResource("5_fnnb4")]
position = Vector2(584, 472)
upgrade_name = "bullet_speed"
cost_increase = 5
upgrade_data = ExtResource("13_a1tei")
sprite = ExtResource("9_un3yt")

[connection signal="body_entered" from="NextArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LoadDelay" to="." method="_on_load_delay_timeout"]
